...
        android:text="MyReminder"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/GetRemindersButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="Enter Zip Code"
        android:padding="5dp" />

    <Button
...
